# total-perspective-vortex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MIGRATION.rst  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yaml  tests.yaml
docs/: Makefile  conf.py  index.rst
docs/samples/: job_conf.yml
docs/topics/: advanced_topics.rst  concepts.rst  configure_galaxy.rst  configure_vortex_rules.rst  faq.rst  inner_workings.rst  installation.rst  migration_guide.rst  shell_commands.rst  tpv_by_example.rst  vortex_by_example.rst
tests/: closest_location.py  conftest.py  mock_galaxy.py  test_dump.py  test_entity.py  test_explain.py  test_helpers.py  test_mapper_basic.py  test_mapper_context.py  test_mapper_destinations.py  test_mapper_inheritance.py  test_mapper_merge_multiple.py  test_mapper_params_specific.py  test_mapper_rank.py  test_mapper_resource_requirements.py  test_mapper_resubmit.py  test_mapper_role.py  test_mapper_rules.py  test_mapper_sample.py  test_mapper_user.py  test_scenarios.py  test_scenarios_1.py  test_scenarios_2.py  test_scenarios_locations.py  test_shell.py
tests/fixtures/: destinations_locations.yml  job_conf.xml  job_conf.yml  job_conf_dry_run.yml  job_conf_resubmit.yml  job_conf_scenario_locations.yml  job_conf_scenario_usegalaxy_au.yml  mapping-basic.yml  mapping-context.yml  mapping-destinations.yml  mapping-inheritance-invalid.yml  mapping-inheritance-no-default.yml  mapping-inheritance-override-default-inherits.yml  mapping-inheritance.yml  mapping-invalid-regex.yml  mapping-invalid-tags.yml  mapping-merge-cycle-local.yml  mapping-merge-missing-parent-local.yml  mapping-merge-multiple-local.yml  mapping-merge-multiple-remote.yml  mapping-params-specific.yml  mapping-rank.yml  mapping-resource-requirements.yml  mapping-resubmit.yml  mapping-role.yml  mapping-rule-argument-based.yml  mapping-rule-execute.yml  mapping-rule-tool-limits.yml  mapping-rules-changed-extra.yml  mapping-rules-changed.yml  mapping-rules-extra.yml  mapping-rules.yml  mapping-sample.yml  mapping-syntax-error.yml  mapping-tool-type-tags.yml  mapping-user-defined-default-reject.yml  mapping-user-invalid-tags.yml  mapping-user.yml  object_store_locations.yml  response-job-too-small-for-highmem.yml  (+18 more)
tests/fixtures/default_tool/: scenario-local-config-default-tool.yml  scenario-shared-rules.yml  (+2 more)
tpv/: __init__.py
tpv/commands/: dryrunner.py  dumper.py  formatter.py  linter.py  mypy.ini  mypychecker.py  shell.py  type_check_template.j2
tpv/core/: entities.py  evaluator.py  explain.py  formatter.py  helpers.py  linter.py  loader.py  mapper.py  resource_requirements.py  shell.py  util.py
tpv/rules/: gateway.py
vortex/: __init__.py
vortex/core/: entities.py  helpers.py  loader.py  mapper.py  resources.py  shell.py
vortex/rules/: gateway.py  helpers.py  main.py  mapper.py  resources.py
vortex/tests/: mock_galaxy.py  test_mapper.py  test_mapper_basic.py  test_mapper_inheritance.py  test_mapper_merge_multiple.py  test_mapper_rank.py  test_mapper_role.py  test_mapper_rules.py  test_mapper_user.py  test_params_specific.py  test_scenarios.py
(+56 files in other folders)
